# skill-achievability-compiler

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: build_corpus.py
docs/: COMPACTION_PROMPT.md  REAL_SKILLS_REPORT.md  SEMANTIC_VALIDATION.md
examples/retry-research/: SKILL.md
examples/triage-team/: SKILL.md
paper/: README.md  skillachievability.tex  tas.tex
proof/: DirectTyping.v  SkillAchievability.v  check_assumptions.v  check_direct_typing.v
scripts/: fetch_skills.py  make_report.py  semantic_validation.py
src/skillc/: __init__.py  audit.py  checker.py  cli.py  evaluate.py  formula.py  mutate.py  pack.py  profiles.py  session.py
src/skillc/data/: corpus.json  corpus_extended.json
src/skillc/data/profiles/: claude-ai.json  claude-code.json  none.json
src/skillc/frontend/: __init__.py  llm.py  markdown.py
tests/: test_audit.py  test_checker.py  test_cli.py  test_corpus_eval.py  test_extended_corpus.py  test_formula.py  test_fragment.py  test_improvements.py  test_llm_frontend.py  test_markdown_frontend.py  test_pack_schema.py  test_proof.py  test_real_skills.py  test_semantic_validation.py  test_session.py
tests/fixtures/changelog-writer/: SKILL.md
tests/fixtures/embedded-pack/: SKILL.md
tests/fixtures/hallucinated-mailer/: SKILL.md
tests/fixtures/poisoned-helper/: SKILL.md
